--- a/views/inventory/list.ejs
+++ b/views/inventory/list.ejs
@@ -8,7 +8,7 @@
         <div>
             <a href="/inventory/add" class="btn btn-primary align-self-end" role="button">
                 <i class="fas fa-plus-circle"></i> 
-                Add a new Item
+                Add a new Contact
             </a>                
         </div>
 
