--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -88,17 +88,16 @@ H4 { font-family: Dosis;}
                         <i class="fas fa-home"></i> About </a>
                       </a>
                     </li>
-                   <!--
-                     Option for Users that is commented in case itll be used in the future
+                   
                       <li style="width:120px;" class="nav-item">
-                      <% if (title == "Users") { %>
-                        <a style="color:white; background-color: #B4A5E7;" class="nav-link active" href="/users">
+                      <% if (title == "Contact list") { %>
+                        <a style="color:white; background-color: #B4A5E7;" class="nav-link active" href="/inventory/list">
                       <% } else { %>
-                        <a style="color:white; background-color: rgb(59, 66, 99);" class="nav-link" href="/users">
+                        <a style="color:white; background-color: rgb(59, 66, 99);" class="nav-link" href="/inventory/list">
                       <% } %>
-                        <i class="fas fa-home"></i> Users </a>
+                        <i class="fas fa-home"></i> User </a>
                       </a>
-                    </li>>-->
+                    </li>
                     <li style="width:120px;" class="nav-item">
                       <% if (title == "Services") { %>
                         <a style="color:white; background-color: #B4A5E7;" class="nav-link active" href="/services">
