--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -1,15 +1,18 @@
 <% include ../partials/header.ejs %>
-<div  class="col-md-2"></div>
-<div style="background-color: rgb(226, 166, 55); border-radius: 10px;"  class="col-md-8">
-<center>
+<!--User: HectorCruz
+    Password: grande12345
+-->
     <div class="container">
     <div class="row">
-
-        <div class="offset-md-3 col-md-3">
+        <div class="offset-md-4 col-md-3"></div>
+        <div style="background-color: rgb(226, 166, 55); border-radius: 10px;" class="offset-md-4 col-md-6">
+            <center>
             <h1><%= title %></h1>
             <% for(var i in messages) { %>
                 <div class="flash"><%= messages[i] %></div>
             <% } %>
+            </center>
+            <center>
             <form action="/users/signin" method="post">
                 <div class="form-group">
                     <label>Username:</label>
@@ -31,14 +34,12 @@
                     </a>
                 </div>
             </form>
+            </center>
         </div>
         <div>
                         
         </div>
     </div>
 </div>
-</center>
-</div>
-<div  class="col-md-2"></div>
 
 <% include ../partials/footer.ejs %>
