--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,12 +1,10 @@
 
 <% include ../partials/header.ejs %>
-<div  class="col-md-2"></div>
-<div style="background-color: rgb(226, 166, 55); border-radius: 10px;"  class="col-md-8">
-<center>
     <div class="container">
     <div class="row">
-
-        <div class="offset-md-3 col-md-3">
+        <div  class="col-md-3"></div>
+        <div style="background-color: rgb(226, 166, 55); border-radius: 10px;" class="offset-md-6 col-md-6">
+            <center>
             <h1><%= title %></h1>
 
             <% for(var i in messages) { %>
@@ -39,13 +37,16 @@
                 </div>
                 <br>
                 <div>
+                    <p>
                     <input class="btn btn-primary" type="submit" value="Sign-up" />
+                    </p>
+                    <br>
                 </div>
             </form>
         </div>
+    </center>
     </div>
 </div>
-</center>
 </div>
 <div  class="col-md-2"></div>
 
